$Id: Changelog.txt,v 1.142 2011/04/11 09:13:59 nanard Exp $
miniUPnP client Changelog.

2011/04/11:
  moving ReceiveData() to a receivedata.c file.
  parsing presentation url
  adding IGD v2 WANIPv6FirewallControl commands

2011/04/10:
  update of miniupnpcmodule.c
  comments in miniwget.c, update in testminiwget
  Adding errors codes from IGD v2
  new functions in upnpc.c for IGD v2

2011/04/09:
  Support for litteral ip v6 address in miniwget

2011/04/08:
  Adding support for urn:schemas-upnp-org:service:WANIPv6FirewallControl:1
  Updating APIVERSION
  Supporting IPV6 in upnpDiscover()
  Adding a -6 option to upnpc command line tool

2011/03/18:
  miniwget/parseURL() : return an error when url param is null.
  fixing GetListOfPortMappings()

2011/03/14:
  upnpDiscover() now reporting an error code.
  improvements in comments.

2011/03/11:
  adding miniupnpcstrings.h.cmake and CMakeLists.txt files.

2011/02/15:
  Implementation of GetListOfPortMappings()

2011/02/07:
  updates to minixml to support character data starting with spaces
  minixml now support CDATA
  upnpreplyparse treats <NewPortListing> specificaly
  change in simpleUPnPcommand to return the buffer (simplification)

2011/02/06:
  Added leaseDuration argument to AddPortMapping()
  Starting to implement GetListOfPortMappings()

2011/01/11:
  updating wingenminiupnpcstrings.c

2011/01/04:
  improving updateminiupnpcstrings.sh

VERSION 1.5 : released 2011/01/01

2010/12/21:
  use NO_GETADDRINFO macro to disable the use of getaddrinfo/freeaddrinfo

2010/12/11:
  Improvements on getHTTPResponse() code.

2010/12/09:
  new code for miniwget that handle Chunked transfer encoding
  using getHTTPResponse() in SOAP call code
  Adding MANIFEST.in for 'python setup.py bdist_rpm'

2010/11/25:
  changes to minissdpc.c to compile under Win32.
  see http://miniupnp.tuxfamily.org/forum/viewtopic.php?t=729

2010/09/17:
  Various improvement to Makefile from Michał Górny

2010/08/05: